--- a/PassiveFrontend/package.json
+++ b/PassiveFrontend/package.json
@@ -11,16 +11,22 @@
   },
   "private": true,
   "dependencies": {
+    "@ag-grid-community/client-side-row-model": "^23.2.1",
+    "@ag-grid-enterprise/row-grouping": "^23.2.1",
     "@angular/animations": "~10.0.11",
-    "@angular/common": "~10.0.11",
+    "@angular/common": "^10.0.14",
     "@angular/compiler": "~10.0.11",
     "@angular/core": "~10.0.11",
     "@angular/forms": "~10.0.11",
     "@angular/platform-browser": "~10.0.11",
     "@angular/platform-browser-dynamic": "~10.0.11",
     "@angular/router": "~10.0.11",
+    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
+    "ag-grid-angular": "^23.2.1",
+    "ag-grid-community": "^23.2.1",
     "bootstrap": "^4.5.2",
     "font-awesome": "^4.7.0",
+    "jquery": "^3.5.1",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
