--- a/PassiveFrontend/package.json
+++ b/PassiveFrontend/package.json
@@ -24,6 +24,7 @@
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "ag-grid-angular": "^23.2.1",
     "ag-grid-community": "^23.2.1",
+    "angularx-social-login": "^3.2.1",
     "bootstrap": "^4.5.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
