--- a/PassiveFrontend/package.json
+++ b/PassiveFrontend/package.json
@@ -29,6 +29,7 @@
     "bootstrap": "^4.5.2",
     "font-awesome": "^4.7.0",
     "jquery": "^3.5.1",
+    "ngx-webcam": "^0.3.0",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
